reproduced the error

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySql": {
+    "ConnectionString": "Host=localhost;Port=3306;Database=test;User Id=root;Password=mysqlpassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
