--- a/BlazorInteractiveServerAspNet.csproj
+++ b/BlazorInteractiveServerAspNet.csproj
@@ -8,7 +8,9 @@
 
   
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="MudBlazor" Version="6.*" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.2" />
   </ItemGroup>
   
 </Project>
